# project_registry

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  service.py  views.py
migrations/: env.py
migrations/versions/: 0001_create_core_tables.py
scripts/: demo_crud.py  entrypoint.sh  show_db_contents.py
tests/: conftest.py  test_projects.py
